--- a/Templates/Consoleable.Specs/Consoleable.Specs.csproj
+++ b/Templates/Consoleable.Specs/Consoleable.Specs.csproj
@@ -7,10 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Extensions.Logging.ListOfString" Version="4.1.2.5" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+    <PackageReference Include="Extensions.Logging.ListOfString" Version="4.1.2.5"/>
+    <!--#if (testbase) -->
+    <PackageReference Include="TestBase" Version="4.1.4.3"/>
+    <!--#endif -->
   </ItemGroup>
 
   <ItemGroup>
