--- a/Templates/Consoleable/appsettings.json
+++ b/Templates/Consoleable/appsettings.json
@@ -1,6 +1,6 @@
 {
     "Consoleable": {
-      "Setting1": 1
+      "Setting1": "Settings in appsettings.json override defaults coded in Settings.cs"
     },
     
     "Logging":{
