--- a/Templates/Consoleable/Consoleable.csproj
+++ b/Templates/Consoleable/Consoleable.csproj
@@ -2,9 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <!--<TargetFramework>netstandard2.0</TargetFramework>-->
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <!--#if (serilog) -->
-    <DefineConstants>erilog</DefineConstants>
+    <DefineConstants>serilog</DefineConstants>
     <!--#endif -->
   </PropertyGroup>
 
