script and csproj for packaging to nuget

--- a/ConsoleableNugetPackage.csproj
+++ b/ConsoleableNugetPackage.csproj
@@ -4,6 +4,7 @@
     <PackageType>Template</PackageType>
     <PackageVersion>1.0</PackageVersion>
     <PackageId>Consoleable</PackageId>
+    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
     <Title>Consoleable Template for a command-lineable component</Title>
     <Authors>https://github.com/chrisfcarroll</Authors>
     <Description><![CDATA[A slightly-opinionated `dotnet new` template for a component which may be used
@@ -20,14 +21,8 @@ dotnet new consoleable [--name MyName] [--xunit] [--nunit] [--sln] [--serilog] [
 # --nunit : also generate a skeleton nunit test project for the new project
 # --sln : also generate a solution file referencing the new project(s).
 # --serilog : use Serilog for logging
-# --testbase : use TestBase fluent assertions for your tests
+# --testbase : add TestBase fluent assertions to your test project
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-To easily add new projects to an existing solution, run the command from the 
-solution directory then use `dotnet sln add ...`.
-
-Confirm your new project builds with `dotnet run` in the project directory.
-Run tests with a `dotnet test` in the test or solution directory.
 
 Long Example
 
@@ -76,16 +71,6 @@ Because
 Who doesn't secretly want their components to be independently usable
 and testable from the commandline?  
 
-
-#### Why is it worse than `dotnet new classlib`?
-
-Because it will take you 20 seconds to edit the .csproj files, remove the
-`<TargetFramework>netcoreapp3.1</TargetFramework>` and 
-uncomment the `<TargetFramework>netstandard2.0</TargetFramework>`
-
-commandline runnability involves targetting `netcoreapp3.1` instead of
-`netstandard2`. Otoh, that's a 20 second edit of the `.csproj` file to fix.
-
 ### Comments
 
 I borrowed the opinion that a Startup class was a good place to configure a Logger, ConfigurationRoot and Settings from AspNetCore.
@@ -95,32 +80,17 @@ turned out to be marvellously simple.
 
 Adding your own favourite boilerplate is only a fork & a pull request away. Unless you have you really obscure minority opinions. In that case, it's only a fork and no pull request away.
 
+### How to (un)install the Template
 
-### How to install locally
+`dotnet new -i Consoleable`
+`dotnet new -u Consoleable`
 
-```
-git clone https://github.com/chrisfcarroll/Consoleable
-dotnet new -i ./Consoleable/
-# … do some editing then re-install just by installing the directory again:
-dotnet new -i ./Consoleable/ 
-```
-
-Handily, `dotnet new -u` will not only list installed templates it will also list the exact command line to uninstall.
-
-## Any Examples?
-
-https://nuget.org/packages/MailMerge was the somewhat messier forerunner to this template.
-
-What Opinions did you carefully avoid?
+What Opinions did you (not) carefully avoid?
 --------------------------------------
 
-You can add your own choice of logging provider and test framework.
+- You can add your own choice of logging provider and test framework.
 
-
-What Opinions did you not carefully avoid?
---------------------------------------
-
-Dotnet rocks, serilog is great, other logging frameworks are also available, 
+- Dotnet rocks, serilog is great, other logging frameworks are also available, 
 there's nothing to choose between NUnit & xUnit except taste and 15 years of
 assertion helpers, tests should express the specification, and are best written
 as WhenXGivenYThenZ, NFRs can be tested, TestBase fluent assertions are also great.]]></Description>
