--- a/Templates/Consoleable.Tests/Consoleable.Tests.csproj
+++ b/Templates/Consoleable.Tests/Consoleable.Tests.csproj
@@ -1,17 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
-    <PackageReference Include="Extensions.Logging.ListOfString" Version="4.1.2.5"/>
+    <PackageReference Include="nunit" Version="3.13.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+    <PackageReference Include="Extensions.Logging.ListOfString" Version="4.1.2.5" />
     <!--#if (testbase) -->
-    <PackageReference Include="TestBase" Version="4.1.4.3"/>
+    <PackageReference Include="TestBase" Version="4.1.4.4" />
     <!--#endif -->
   </ItemGroup>
 
